dz4/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-dz4
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: user-service-dz4
  template:
    metadata:
      labels:
        app: user-service-dz4
    spec:
      containers:   
        - name: user-service-dz4
          image: itzz/user-service:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
