dz4/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-dz4
spec:
  selector:
    app: user-service-dz4
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
